<resources>
    <string name="app_name">Calculator</string>
    <string name="button7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_x">x</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_minus">-</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_plus">+</string>
    <string name="button_period">.</string>
    <string name="button_equals">=</string>
    <string name="button_0">0</string>
    <string name="button_ce">CE</string>
    <string name="button_erase">"&lt;-"</string>
    <string name="button_div">/</string>

    <!-- Message for textview in case of errors  -->
    <string name="computationError">Error</string>
</resources>
